--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.10",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@popperjs/core": "^2.11.6",
+    "@tailwindcss/forms": "^0.5.3",
+    "@vue/compiler-sfc": "^3.2.45",
     "axios": "^1.2.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
-    "element-plus": "^2.2.28",
-    "vee-validate": "^4.7.3",
+    "gulp": "^4.0.2",
+    "gulp-append-prepend": "^1.0.9",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify": "^2.6.13",
-    "vuex": "^4.1.0",
-    "webfontloader": "^1.6.28"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
